--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-attrs": "^4.1.4",
     "postcss-cli": "^9.1.0",
-    "sass": "^1.49.11"
+    "sass": "^1.49.11",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-order": "^5.0.0"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
