--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "postcss:prod": "postcss --use autoprefixer cssnano --no-map --replace dist/css/*.css",
     "css:dev": "npm run sass:dev",
     "css:prod": "npm run sass:prod & npm run postcss:prod",
+    "js:prod": "terser src/js/* --compress -o dist/js/main.min.js",
     "eleventy:serve": "eleventy --serve",
     "eleventy:build": "eleventy",
     "start": "npm run css:dev & npm run eleventy:serve",
-    "build": "npm run css:prod && npm run eleventy:build"
+    "build": "npm run css:prod && npm run eleventy:build && npm run js:prod"
   },
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
